Add JUnit 5 parameterized tests for Vocabulary and JsonService; refactor Vocabulary creation logic